--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.1",
     "lodash": ">=4.17.19",
-    "mongoose": "^5.0.9"
+    "mongoose": ">=5.7.5"
   }
 }
